[package]
name = "aes-strings"
version = "0.1.0"
authors = ["Vishal Menon <vishalmenon.92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.28"
rand = "0.6.0"
rand_seeder = "0.2.2"
base64 = "0.12.3"
